--- a/apps/whitehall.html
+++ b/apps/whitehall.html
@@ -481,7 +481,6 @@
       </ul>
 </ul>
 <h2 id='example-pages-published-by-whitehall'>Example pages published by whitehall</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="https://www.gov.uk/government/organisations" class="govuk-link">Departments, agencies and public bodies</a></li>
       <li><a href="https://www.gov.uk/government/ministers" class="govuk-link">Ministers</a></li>
       <li><a href="https://www.gov.uk/government/people/matthew-hancock" class="govuk-link">The Rt Hon Matt Hancock MP</a></li>
       <li><a href="https://www.gov.uk/world/embassies" class="govuk-link">Find a British embassy, high commission or consulate</a></li>
@@ -491,6 +490,7 @@
       <li><a href="https://www.gov.uk/government/people/nadhim-zahawi" class="govuk-link">Nadhim Zahawi MP</a></li>
       <li><a href="https://www.gov.uk/government/people/boris-johnson" class="govuk-link">The Rt Hon Boris Johnson MP</a></li>
       <li><a href="https://www.gov.uk/government/people/mercy-muroki" class="govuk-link">Mercy Muroki</a></li>
+      <li><a href="https://www.gov.uk/government/people/christopher-whitty" class="govuk-link">Professor Chris Whitty</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
