--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.ukhttp//www.powys.gov.uk">Powys County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk">Ethnicity facts and figures</a></li>
+<li><a href="https://www.gov.ukhttp//www.cookstown.gov.uk/">Cookstown District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.north-ayrshire.gov.uk">North Ayrshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.cyberaware.gov.uk">Cyber Aware</a></li>
+<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.beanenergyshopper.com/">Power to Switch</a></li>
+<li><a href="https://www.gov.ukhttp//www.liverpool.gov.uk">Liverpool City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.barnet.gov.uk/">London Borough of Barnet Council</a></li>
 <li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nidirect.gov.uk/campaigns/coronavirus-covid-19">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.monmouthshire.gov.uk">Monmouthshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.portsmouth.gov.uk">Portsmouth City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.haringey.gov.uk/">London Borough of Haringey Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/">Care homes - NHS</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
