--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
-      <li><a href="https://www.nhs.uk/active10" class="govuk-link">Active 10</a></li>
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
-      <li><a href="http://www.tewkesburybc.gov.uk" class="govuk-link">Tewkesbury Borough Council</a></li>
       <li><a href="http://www.pembrokeshire.gov.uk" class="govuk-link">Pembrokeshire County Council</a></li>
+      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
+      <li><a href="http://www.ards-council.gov.uk/" class="govuk-link">Ards Borough Council</a></li>
       <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
-      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
-      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
-      <li><a href="http://www.reigate-banstead.gov.uk/" class="govuk-link">Reigate and Banstead Borough Council</a></li>
-      <li><a href="http://www.oxford.gov.uk" class="govuk-link">Oxford City Council</a></li>
+      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
+      <li><a href="https://www.nidirect.gov.uk/campaigns/coronavirus-covid-19" class="govuk-link">Coronavirus (COVID-19) in Northern Ireland - nidirect</a></li>
+      <li><a href="http://www.brent.gov.uk" class="govuk-link">London Borough of Brent Council</a></li>
+      <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
+      <li><a href="http://www.southbucks.gov.uk" class="govuk-link">South Bucks District Council</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
